# SPConfigurator

./: .gitignore  CMakeLists.txt  NodeView.cpp  NodeView.h  README.md  SPConfigurator.pro  SPConfiguratorListener.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  spconfigurator.cpp  spconfigurator.h
